--- a/style.css
+++ b/style.css
@@ -18,16 +18,32 @@ main button{
     font-weight: bold;
 }
 
+
 .calculator{
     width: 40vw;
     height: auto;
-    background-color: red;
 }
 
 .output{
     background-color: rgb(62, 62, 62);
+    color: white;
     width: 100%;
     min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.output div{
+   padding: 10px 0;
+}
+
+.output .previous{
+    font-size: 1.5rem;
+}
+.output .current{
+    font-size: 2.5rem;
 }
 
 .calculator-indicators{
